--- a/algorithms/offline/test.ipynb
+++ b/algorithms/offline/test.ipynb
@@ -428,36 +428,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "type object 'Config' has no attribute 'from_dict'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[11], line 6\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m/home/nikisim/Mag_diplom/CORL/data/saved_models/FetchPush/config.json\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m json_file:\n\u001b[1;32m      4\u001b[0m     config_dict \u001b[38;5;241m=\u001b[39m json\u001b[38;5;241m.\u001b[39mload(json_file)\n\u001b[0;32m----> 6\u001b[0m config \u001b[38;5;241m=\u001b[39m \u001b[43mConfig\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfrom_dict\u001b[49m(config_dict)\n",
-      "\u001b[0;31mAttributeError\u001b[0m: type object 'Config' has no attribute 'from_dict'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from rebrac_Fetch import Config\n",
     "import json\n",
     "with open('/home/nikisim/Mag_diplom/CORL/data/saved_models/FetchPush/config.json') as json_file:\n",
     "    config_dict = json.load(json_file)\n",
     "\n",
-    "config = Config.from_dict(config_dict)"
+    "config = Config.from_dict(Config, config_dict)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/home/nikisim/Mag_diplom/CORL/data/FetchPushDense.npy'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "config.dataset_name"
+   ]
   },
   {
    "cell_type": "code",
